Được tạo bằng Colaboratory

--- a/Lab01/Lab01.ipynb
+++ b/Lab01/Lab01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNjXGeGHRL2lfiXrrDoVZrv",
+      "authorship_tag": "ABX9TyO1JTNVIuBL6ezLp9D1ZOAK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,67 @@
           "metadata": {},
           "execution_count": 1
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hbvvY-c_I9tX",
+        "outputId": "21dab782-1efd-4a69-b34b-078e09cdfdf9"
+      },
+      "source": [
+        "max(2, -3, 4, 7, -5) "
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wzatSHGSJTR9",
+        "outputId": "87f2554e-4420-424e-85e8-ade3d9d616f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "max(2, -3, min(4, 7), -5) "
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fAZmVMmbI_WP"
+      },
+      "source": [
+        ""
       ]
     }
   ]
