Được tạo bằng Colaboratory

--- a/Lab01/Lab01.ipynb
+++ b/Lab01/Lab01.ipynb
@@ -6,7 +6,7 @@
       "name": "Lab01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEAJrm7DDwUtuXLxOCrKo7",
+      "authorship_tag": "ABX9TyPnh5J8fJfRD8o71nosGd8A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
       "source": [
         "min(2, 3, 4) "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -66,7 +66,7 @@
       "source": [
         "max(2, -3, 4, 7, -5) "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,7 +92,7 @@
       "source": [
         "max(2, -3, min(4, 7), -5) "
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -118,7 +118,7 @@
       "source": [
         "min(max(3, 4), abs(-5)) "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +144,7 @@
       "source": [
         "abs(min(4, 6, max(2, 8))) "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +170,7 @@
       "source": [
         "round(max(5.572, 3.258), abs(-2))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
         "    return num * 3 \n",
         "triple(3) "
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
         "    return abs(number1 - number2) \n",
         "absolute_difference(3, 7) "
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
         "    return km / 1.6 \n",
         "km_to_miles(5)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
         "    return (grade1 + grade2 + grade3) / 3  \n",
         "average_grade(80, 95, 90) \n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,7 +318,7 @@
         "    return (grade1 + grade2 + grade3) / 3 \n",
         "top_three_avg(50, 60, 70, 80) "
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,24 +339,141 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUs1xNRsSfE2",
-        "outputId": "5336727d-1dd7-4e10-cc85-988b1660e089"
+        "outputId": "a3ac9c70-07dd-4fad-ee0e-ee107745c522"
       },
       "source": [
         "def weeks_elapsed(day1, day2): \n",
-        "    return (day1, day2)\n",
+        "    return abs(int((day1 - day2)/7))\n",
         "weeks_elapsed(3, 20)"
       ],
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(3, 20)"
+              "2"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rFSl76ELYl4v",
+        "outputId": "29dacd4d-0e9b-4972-e52f-fe5ad7359c0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "weeks_elapsed(20, 3)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VpezOJ0zai_L",
+        "outputId": "d04b3cf3-f40b-4425-c112-f39c0d5a9855",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "weeks_elapsed(8, 5) "
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SeeLTG-WamlT",
+        "outputId": "28722313-dd11-4c9c-ea2c-1f9f6c2edde9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "weeks_elapsed(40, 61) "
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "st02HLCnYsut"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NxbFZefXXsXz",
+        "outputId": "27fd2768-df9e-4f1f-b4ae-c52eb20d4e9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def square(num):\n",
+        "    return (num*num)\n",
+        "square(3) "
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     },
