--- a/Lab01/Chương7.ipynb
+++ b/Lab01/Chương7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNv4YxTIutF+jDBYJP78Dho",
+      "authorship_tag": "ABX9TyNxEFX3Q9z5ilI8Ho7Rl1c1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
       "source": [
         "'hello'.upper() "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -70,7 +70,7 @@
       "source": [
         "'Happy Birthday!'.lower() "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +99,7 @@
       "source": [
         "'ABC123'.isupper() "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
       "source": [
         "'aeiouAEIOU'.count('a') "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +151,7 @@
       "source": [
         "'hello'.endswith('o') "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,7 +177,7 @@
       "source": [
         "'hello'.startswith('H') "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
       "source": [
         "'Hello {0}'.format('Python') "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,7 +234,7 @@
       "source": [
         "'Hello {0}! Hello {1}!'.format('Python', 'World') "
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,7 +263,7 @@
       "source": [
         "'tomato'.count('o')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +289,7 @@
       "source": [
         "'tomato'.find('o')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
       "source": [
         "'tomato'.find('o', 'tomato'.find('o') + 1)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
       "source": [
         "'avocado'.find('o', 'avocado'.find('o') + 1)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +368,7 @@
       "source": [
         "'runner'.replace('n','b')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,87 +399,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eGqP257cAeP4",
-        "outputId": "fbce1d53-8c5a-4e4f-a782-c44e987914ae"
+        "id": "eGqP257cAeP4"
       },
       "source": [
         "fruit = 'pineapple'\n",
-        "fruit.find('p', fruit.count('p')) "
+        "fruit.count('p') then fruit.find('p', 3)"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vK5Sc-8XA3qp",
-        "outputId": "98660e1f-8554-4e55-fc63-28472e83b668"
+        "id": "vK5Sc-8XA3qp"
       },
       "source": [
         "fruit = 'pineapple'\n",
-        "fruit.count(fruit.upper().swapcase()) "
+        "fruit.upper() then 'PINEAPPLE'.swapcase() then fruit.count('pineapple') "
       ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "upKMvEXlA8Et",
-        "outputId": "acc4eb05-2ae5-4fb5-dce9-67314fd9870c"
+        "id": "upKMvEXlA8Et"
       },
       "source": [
         "fruit = 'pineapple'\n",
-        "fruit.replace(fruit.swapcase(), fruit.lower()) "
+        "fruit.swapcase() then fruit.lower() then fruit.replace('PINEAPPLE', 'pineapple')"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'pineapple'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -495,7 +446,7 @@
         "season = 'summer'\n",
         "'I love {0}!'.format(season)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +479,7 @@
         "side3 = 5\n",
         "'The sides have lengths {0}, {1}, and {2}.'.format(side1, side2, side3)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,7 +509,7 @@
       "source": [
         "'boolean'.capitalize()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +538,7 @@
       "source": [
         "'CO2 H2O'.find('2')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -613,7 +564,7 @@
       "source": [
         "'CO2 H2O'.find('2', 'CO2 H2O'.find('2') + 1)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,7 +590,7 @@
       "source": [
         "'Boolean'[0].islower()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +617,7 @@
       "source": [
         "'MoNDaY'.lower().capitalize()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +647,7 @@
       "source": [
         "' Monday'.lstrip()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -727,7 +678,7 @@
         "  return s1.count(ch) + s2.count(ch)\n",
         "total_occurrences('color', 'yellow', 'l') "
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +706,7 @@
         "  return s1.count(ch) + s2.count(ch)\n",
         "total_occurrences('red', 'blue', 'l') "
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +734,7 @@
         "  return s1.count(ch) + s2.count(ch)\n",
         "total_occurrences('green', 'purple', 'b')"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
