Được tạo bằng Colaboratory

--- a/Lab02/chương9.ipynb
+++ b/Lab02/chương9.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "chương9.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNzZoArMh3H/GXz6RlQ4YQE",
+      "authorship_tag": "ABX9TyNvJAg4gT/0UX8HI/H9ud4w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "for phenotype in celegans_phenotypes:\n",
         "  print(phenotype)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
         "for value in half_lives:\n",
         "  print(value, end=' ')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "  more_whales.append(count + 1) \n",
         "more_whales"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +120,7 @@
       "source": [
         "alkaline_earth_metals = [[4, 9.012], [12, 24.305],[20, 40.078], [38, 87.62],[56, 137.327], [88, 226]]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
         "  print(inner_list[0])\n",
         "  print(inner_list[1])"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +174,7 @@
         "  print(number_and_weight.append(inner_list[0]))\n",
         "  print(number_and_weight.append(inner_list[1]))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,13 +234,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4FsnOgvIAcPz"
+        "id": "4FsnOgvIAcPz",
+        "outputId": "538a0f4a-8e95-40a9-eee4-53c6ff420c21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "country_populations = [1295, 23, 7, 3, 47, 21]\n",
+        "total = 0\n",
+        "for population in country_populations:\n",
+        "  total += population\n",
+        "total"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1396"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     }
   ]
 }
